# SDL2-Framework

./: .clangd  CMakeLists.txt  README.md  Session.vim  compile_flags.txt
cmake/: 3rdparty.cmake  Vector3D.cmake  imgui.cmake
cmake/modules/: FindTMXLITE.cmake
src/: main.cpp
src/Framework/: Game.hpp  Input.hpp  PixelBuffer.hpp  Sprite.hpp  Texture.hpp  Tilemap.hpp
src/Framework/Core/: Game.hpp
src/Framework/Graphics/: PixelBuffer.hpp  Sprite.hpp  Texture.hpp  Tilemap.hpp  Transform.hpp
src/Framework/Miscellaneous/: Camera.hpp  IRenderable.hpp
test/: main.cpp
